fix logo top being slightly cut off

--- a/web/less/nav-bar-logo.less
+++ b/web/less/nav-bar-logo.less
@@ -14,6 +14,10 @@
     color: @logo-blue;
     fill: @logo-blue;
     transition: all 0.5s;
+    
+    .flex-display(inline-flex);
+    .align-items(center);
+    
     &:hover {
         color: @logo-blue + #444;
         fill: @logo-blue + #444;
@@ -21,11 +25,13 @@
     }
 
     svg {
-        height: 100%;
+        
         .hdpi({
             width: 40px;
+            height: 50px;
         });
         width: 50px;
+        height: 50px;
         float: left;
     }
 }
